# nethical-recon

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DISCLAIMER.md  Dockerfile  FALA_2_COMPLETE.md  FALA_5_COMPLETE.md  FALA_7_COMPLETE.md  FALA_8_COMPLETE.md  Fundamental_Laws.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PHASE_C.md  IMPLEMENTATION_STATUS.md  LICENSE  PHASE_A_SUMMARY.md  PHASE_B_SUMMARY.md  PHASE_B_TECHNICAL_DEBT.md  PHASE_C_SUMMARY.md  PHASE_D_SUMMARY.md  PHASE_E_SUMMARY.md  PHASE_F_SUMMARY.md  PHASE_G_SUMMARY.md  PHASE_I_SUMMARY.md  PHASE_L_SUMMARY.md  QUICKSTART_PHASE_C.md  README.md  SECURITY.md  TERMS_OF_USE.md  WORKER_DEPLOYMENT.md  alembic.ini  context_test.db  docker-compose.yml  nethical_recon.py  nethical_recon_legacy.py  policy.yaml.example  pooled_stains.db  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
FALE/: FALA_1_COMPLETE.md  FALA_4_COMPLETE.md  FALA_9_COMPLETE.md
ai/: __init__.py  advisor.py  analyzer.py  bird_coordinator.py  correlator.py  forest_ai.py  learner.py  predictor.py  reporter.py  threat_classifier.py
ai/prompts/: README.md
alembic/: env.py
alembic/versions/: 9a05e7a878a8_initial_schema_with_all_domain_models.py
cameras/: README.md  __init__.py  base.py  censys_eye.py  dns_enum.py  harvester_eye.py  key_rotation.py  manager.py  shodan_eye.py  ssl_scanner.py  waf_detector.py
database/: README.md  __init__.py  base_store.py  connection_pool.py  db2_store.py  elasticsearch_store.py  mongodb_store.py  mssql_store.py  mysql_store.py  oracle_store.py  postgres_store.py  redis_cache.py  snowflake_store.py  sqlite_store.py  store_factory.py
docs/: AI_MODELS_README.md  CAMERAS_README.md  DOCKER_DEPLOYMENT.md  FALA_3_COMPLETE.md  FALA_6_COMPLETE.md  FOREST_README.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INFRA_README.md  KUBERNETES_DEPLOYMENT.md  NANOBOTS_README.md  OBSERVABILITY_README.md  PHASE_B_SUMMARY.md  PHASE_C_SUMMARY.md  PHASE_G_SUMMARY.md  PHASE_H_SUMMARY.md  PHASE_ROADMAP5_III_SUMMARY.md  PHASE_ROADMAP5_II_SUMMARY.md  PHASE_ROADMAP5_IV_SUMMARY.md  PHASE_ROADMAP5_I_SUMMARY.md  PHASE_ROADMAP5_V_SUMMARY.md  ROADMAP.md  ROADMAP4.md  ROADMAP5.md  ROADMAP_3.md  WEAPONS_README.md  WORKER_README.md  demo_section_iii.py
docs/legal/: COOKIE_POLICY.md  EXPORT_COMPLIANCE.md  PRIVACY_POLICY.md
examples/: camera_basic_example.py  dashboard_example.py  database_example.py  forest_basic_example.py  nanobot_basic_example.py  phase_b_demo.py  policy_engine_example.py  sensor_basic_example.py  sky_example.py  weapon_basic_example.py  worker_usage.py
examples/phase_c/: .env.example  README.md  policy_example.py  scheduler_example.py  worker_example.py
forest/: __init__.py  base.py  graph_export.py  health_check.py  manager.py
forest/sky/: __init__.py  base_bird.py  bird_song.py  communication.py  eagle.py  falcon.py  flight_controller.py  owl.py  sparrow.py  topology_viz.py
forest/threats/: __init__.py  base.py  bat.py  crow.py  detector.py  magpie.py  parasite.py  snake.py  squirrel.py
forest/trees/: __init__.py  branch.py  crown.py  forest_map.py  leaf.py  tree.py  trunk.py
forest/visualization/: __init__.py  sky_view.py  threat_map.py
infra/: Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  deploy.sh
infra/k8s/: api.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  pvc.yaml  redis.yaml  scheduler.yaml  secrets.yaml  worker.yaml
nanobots/: __init__.py  base.py  swarm.py  swarm_coordination.py
nanobots/actions/: __init__.py  alert.py  block_ip.py  enumerate.py  forest_patrol.py  honeypot.py  rate_limit.py  threat_hunt.py
nanobots/learning/: __init__.py  anomaly_ml.py  baseline.py
nanobots/rules/: __init__.py  engine.py  hybrid_mode.py
nethical_recon/: cli.py
observability/: prometheus.yml
sensors/: README.md  __init__.py  base.py  health_monitor.py  manager.py
sensors/network/: __init__.py  anomaly_detector.py  port_scan_detector.py  protocol_analyzer.py  traffic_monitor.py
sensors/system/: __init__.py  auth_monitor.py  dns_watcher.py  file_watcher.py  heartbeat_monitor.py  resource_monitor.py
src/ai/: analyzer.py  bird_coordinator.py  correlator.py  deduplication.py  llm_client.py  predictor.py  reporter.py  threat_classifier.py  threat_intelligence.py
src/alembic/: env.py
src/cameras/: censys_eye.py  enrichment.py  harvester_eye.py  key_rotation.py  manager.py  rate_limiter.py  shodan_eye.py  ssl_scanner.py  waf_detector.py
src/database/: backup_restore.py  connection_pool.py  elasticsearch_store.py  mongodb_store.py  mysql_store.py  oracle_store.py  pooling.py  postgres_store.py  query_optimization.py  redis_cache.py  snowflake_store.py  sqlite_store.py
src/examples/: camera_basic_example.py  dashboard_example.py  database_example.py  roadmap5_section2_example.py  roadmap5_section_v_example.py  sensor_basic_example.py  sky_example.py  weapon_basic_example.py
src/forest/: __init__.py  graph_export.py  snapshot.py  websocket_updates.py
src/legacy/: nethical_recon_legacy.py
src/nanobots/: __init__.py  adaptive_behavior.py  base.py  ml_prediction.py  swarm_coordination.py
src/nethical_recon/: __init__.py  cameras  cli.py  config.py  forest  nanobots  sensors  utils.py  weapons
src/observability/: alert_rules.yml
src/sensors/: auto_tuning.py  correlation_engine.py  health_monitor.py
src/tests/: test_attack_surface.py  test_cisa_integration.py  test_dashboard_streaming.py  test_parsers.py  (+10 more)
tests/: conftest.py  test_api.py  test_models.py  test_observability.py  test_parsers.py  test_passive_recon.py  test_phase_c.py  test_phase_h.py  test_phase_i.py  test_policy.py  test_scheduler.py  test_secrets.py  test_security.py  test_smoke.py  test_storage.py  test_worker.py  test_worker_integration.py
ui/: README.md  __init__.py  base.py  dashboard.py
weapons/: __init__.py  base.py  fire_control.py  marker_gun.py  marker_persistence.py  stealth_metrics.py  targeting.py
(+295 files in other folders)
