[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nethical-recon"
version = "0.1.0"
description = "Advanced Cybersecurity Reconnaissance & Threat Hunting Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "V1B3hR"}
]
keywords = ["security", "reconnaissance", "threat-hunting", "cybersecurity", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psutil>=5.8.0",
    "shodan>=1.28.0",
    "censys>=2.1.9",
    "dnspython>=2.3.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0",
    "textual>=0.41.0",
    "colorama>=0.4.6",
    "openai>=1.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.15,<0.3.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.0.0",
]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["mysql-connector-python>=8.0.0"]
mssql = ["pyodbc>=4.0.0"]
oracle = ["cx_Oracle>=8.3.0"]
db2 = ["ibm_db>=3.1.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
mongodb = ["pymongo>=4.0.0"]
redis = ["redis>=4.5.0"]
elasticsearch = ["elasticsearch>=8.0.0"]

[project.scripts]
nethical = "nethical_recon.cli:main"

[project.urls]
Homepage = "https://github.com/V1B3hR/nethical-recon"
Repository = "https://github.com/V1B3hR/nethical-recon"
Issues = "https://github.com/V1B3hR/nethical-recon/issues"

[tool.setuptools]
packages = ["nethical_recon"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
nethical_recon = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=nethical_recon",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]
