[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nethical-recon"
version = "0.1.0"
description = "Advanced Cybersecurity Reconnaissance & Threat Hunting Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "V1B3hR"}
]
keywords = ["security", "reconnaissance", "threat-hunting", "cybersecurity", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "psutil>=5.8.0",
    "shodan>=1.28.0",
    "censys>=2.1.9",
    "dnspython>=2.3.0",
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "rich>=13.0.0",
    "textual>=0.41.0",
    "colorama>=0.4.6",
    "openai>=1.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=4.5.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "isort>=5.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.0.0",
]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["mysql-connector-python>=8.0.0"]
mssql = ["pyodbc>=4.0.0"]
oracle = ["cx_Oracle>=8.3.0"]
db2 = ["ibm_db>=3.1.0"]
snowflake = ["snowflake-connector-python>=3.0.0"]
mongodb = ["pymongo>=4.0.0"]
redis = ["redis>=4.5.0"]
elasticsearch = ["elasticsearch>=8.0.0"]

[project.scripts]
nethical = "nethical_recon.cli:main"

[project.urls]
Homepage = "https://github.com/V1B3hR/nethical-recon"
Repository = "https://github.com/V1B3hR/nethical-recon"
Issues = "https://github.com/V1B3hR/nethical-recon/issues"

[tool.setuptools]
packages.find = {where = ["src"], include = ["nethical_recon*"]}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
nethical_recon = ["py.typed"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | src/nethical_recon/ai
  | src/nethical_recon/cameras
  | src/nethical_recon/database
  | src/nethical_recon/forest
  | src/nethical_recon/nanobots
  | src/nethical_recon/sensors
  | src/nethical_recon/ui
  | src/nethical_recon/weapons
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=nethical_recon",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/ai/*", "*/cameras/*", "*/database/*", "*/forest/*", "*/nanobots/*", "*/sensors/*", "*/ui/*", "*/weapons/*"]
